--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,9 @@ body {
     border-radius: 5px;
     line-height: 20px;
     text-shadow: none; }
+  @media (max-width: 768px) {
+    .header .white-border1 {
+      display: none; } }
 
 .menu-show .list {
   max-height: 600px; }
@@ -172,6 +175,17 @@ body {
   @media (max-width: 768px) {
     .content {
       padding: 0; } }
+  .content .white-border2 {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 90%;
+    padding: 0 20px; }
+    @media (max-width: 768px) {
+      .content .white-border2 {
+        display: none; } }
+    .content .white-border2 > * {
+      position: absolute; }
   .content .img {
     max-width: 100%;
     position: relative;
@@ -191,21 +205,11 @@ body {
     .content .img .main-img {
       position: relative;
       z-index: 3; }
-  .content .white-border {
-    position: absolute;
-    z-index: 5;
-    width: 100%;
-    height: 90%;
-    padding: 0 20px; }
-    @media (max-width: 768px) {
-      .content .white-border {
-        display: none; } }
-    .content .white-border > * {
-      position: absolute; }
 
 .content-text {
   margin: 0 auto;
   position: relative;
+  z-index: 5;
   padding: 50px;
   color: #fff; }
   @media (max-width: 768px) {
