--- a/scss/style.scss
+++ b/scss/style.scss
@@ -128,6 +128,11 @@ body {
             }
         }
     }
+    .white-border1{
+        @include pad() {
+            display: none;
+        }
+    }
 }
 
 .menu-show .list {
@@ -164,6 +169,19 @@ body {
     @include pad() {
         padding: 0;
     }
+    .white-border2{
+        position: absolute;
+        z-index: 2;
+        width: 100%;
+        height: 90%;
+        padding:0 20px;
+        @include pad() {
+            display: none;
+        }
+        >* {
+            position: absolute;
+        }
+    }
     .img {
         max-width: 100%;
         position: relative;
@@ -189,24 +207,12 @@ body {
             z-index: 3;
         }
     }
-    .white-border{
-        position: absolute;
-        z-index: 5;
-        width: 100%;
-        height: 90%;
-        padding:0 20px;
-        @include pad() {
-            display: none;
-        }
-        >* {
-            position: absolute;
-        }
-    }
 }
 
 .content-text {
     margin: 0 auto;
     position: relative;
+    z-index: 5;
     padding: 50px;
     color: #fff;
     @include pad() {
